--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "sass": "^1.57.0",
+    "sass-loader": "^13.2.0"
   },
   "browserslist": [
     "> 1%",
